<resources>
    <string name="app_name">MyEvents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="Organizers">
        <item>Select Organizer</item>
        <item>Saga Group</item>
        <item>All Events</item>
        <item>Bloom Events</item>
    </string-array>
    <string name="title_activity_register">Register</string>

    <string name="saga_events_dashboard">SAGA EVENTS DASHBOARD</string>

    <string name="rate_us">RATE US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="events">EVENTS</string>
    <string name="about_us">ABOUT US</string>

    <string name="login">LOGIN</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="todo1">TODO</string>
    <string name="online_booking_system">ONLINE BOOKING SYSTEM</string>
    <string name="booking_status">BOOKING STATUS</string>
    <string name="book_history">BOOK HISTORY</string>
    <string name="open_an_event">OPEN AN EVENT</string>
    <string name="profile">PROFILE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="book_an_event">BOOK AN EVENT</string>
    <string name="book_id">Book ID</string>
    <string name="event_type">Event Type</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="no_of_guests">No of Guests</string>
    <string name="next">NEXT</string>
    <string name="equipments">Equipments</string>
    <string name="dj">DJ</string>
    <string name="type_here">type here</string>
    <string name="stage">Stage</string>
    <string name="here_type">here Type</string>
</resources>
