<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"

        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#110C11"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/elanyw"
                    >

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/eventor"
                        android:layout_gravity="center"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="THE EVENTOR"
                        android:textColor="#FF5600"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="10dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="215dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"

                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3"
                                >

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView1"
                                    android:layout_height="50dp"
                                    android:src="@drawable/login1"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/login"
                                    android:textSize="16sp"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:layout_below="@+id/imageView1"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonLogin"
                                    android:background="@android:color/transparent"

                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginStart="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView2"
                                    android:layout_height="50dp"
                                    android:src="@drawable/register1"
                                    android:layout_centerInParent="true"/>


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/register"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_below="@+id/imageView2"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonRegister"
                                    android:background="@android:color/transparent"


                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>




                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"

                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3"
                                >

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView3"
                                    android:layout_height="50dp"
                                    android:src="@drawable/aboutus"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_us"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_below="@+id/imageView3"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonAbout_us1"
                                    android:background="@android:color/transparent"

                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginStart="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3"
                                >

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView4"
                                    android:layout_height="50dp"
                                    android:src="@drawable/events"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/events"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_below="@+id/imageView4"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonEvents"
                                    android:background="@android:color/transparent"


                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>




                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"

                        >

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginEnd="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3"
                                >

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView5"
                                    android:layout_height="50dp"
                                    android:src="@drawable/contactusicon"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/contact_us"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_below="@+id/imageView5"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonContactUs"
                                    android:background="@android:color/transparent"

                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginStart="5dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#C4B6B3"
                                >

                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageView6"
                                    android:layout_height="50dp"
                                    android:src="@drawable/rate"
                                    android:layout_centerInParent="true"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rate_us"
                                    android:textColor="#110C11"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:layout_below="@+id/imageView6"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"

                                    />

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/buttonRateUs"
                                    android:background="@android:color/transparent"


                                    />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>




                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</RelativeLayout>